Allow a fixed value in queries, these should not be replaces with prepared statement query parameters